syntax = "proto3";

package grpc;

option go_package = "github.com/jmbarzee/dominion/grpc";
import "identity.proto";

service Domain {
	// Heartbeat verifies the status/identity of the domain
	rpc Heartbeat (HeartbeatRequest) returns (HeartbeatReply) {}

	// StartService requests a domain start a service
	rpc StartService (StartServiceRequest) returns (StartServiceReply) {}
}



// HeartbeatRequest contains the identity of the dominion
message HeartbeatRequest {
	// Dominion is the requesting dominion
	DominionIdentity Dominion = 1;
}

message HeartbeatReply {
	// Domain is the responding domainIdentity
	DomainIdentity Domain = 1;
	// Services is the list of services a Domain currently offers
	repeated ServiceIdentity Services = 2;
}


// StartServiceRequest contains the type of service which needs started
message StartServiceRequest {
	// Type is the name of the service which is requested
	string Type = 1;
	// DockerImage is the image to use for the service
	string DockerImage = 2;
}

// StartServiceRequest contains the type of service which needs started
message StartServiceReply {
	// Service is the newly started service
	ServiceIdentity Service = 1;
}