syntax = "proto3";

package grpcd;

import "identity.proto";

service Service {
	// Heartbeat verifies the status/identity of the domain
	rpc Heartbeat (ServiceHeartbeatRequest) returns (ServiceHeartbeatReply) {}
}


// ServiceHeartbeatRequest contains the identity of the Domain
message ServiceHeartbeatRequest {
	// Domain is the requesting Domain
	DomainIdentity Domain = 1;
}

message ServiceHeartbeatReply {
	// Service is the responding serviceIdentity
	ServiceIdentity Service = 1;
}